--- a/java/pom.xml
+++ b/java/pom.xml
@@ -24,10 +24,10 @@
     </modules>
 
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
 
-        <java.version>17</java.version>
+        <java.version>11</java.version>
 
         <spring.boot.version>2.5.13</spring.boot.version>
         <spring.oauth2.jwt.version>1.1.1.RELEASE</spring.oauth2.jwt.version>
@@ -245,6 +245,14 @@
                     <version>${maven-surefire-plugin.version}</version>
                     <configuration>
                         <argLine>-Duser.timezone=UTC</argLine>
+                        <systemPropertyVariables>
+                            <spring.datasource.url>jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1</spring.datasource.url>
+                            <spring.datasource.driver-class-name>org.h2.Driver</spring.datasource.driver-class-name>
+                            <spring.datasource.username>sa</spring.datasource.username>
+                            <spring.datasource.password></spring.datasource.password>
+                            <spring.jpa.hibernate.ddl-auto>create-drop</spring.jpa.hibernate.ddl-auto>
+                            <spring.liquibase.enabled>false</spring.liquibase.enabled>
+                        </systemPropertyVariables>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -253,6 +261,25 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>${maven-surefire-plugin.version}</version>
+                    <configuration>
+                        <argLine>-Duser.timezone=UTC</argLine>
+                        <systemPropertyVariables>
+                            <spring.datasource.url>jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1</spring.datasource.url>
+                            <spring.datasource.driver-class-name>org.h2.Driver</spring.datasource.driver-class-name>
+                            <spring.datasource.username>sa</spring.datasource.username>
+                            <spring.datasource.password></spring.datasource.password>
+                            <spring.jpa.hibernate.ddl-auto>create-drop</spring.jpa.hibernate.ddl-auto>
+                            <spring.liquibase.enabled>false</spring.liquibase.enabled>
+                        </systemPropertyVariables>
+                    </configuration>
+                </plugin>
+            </plugins>
+
     </build>
 
 </project>
