--- a/java/api/src/main/resources/application.yml
+++ b/java/api/src/main/resources/application.yml
@@ -10,6 +10,21 @@ spring:
   profiles:
     active: prod
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info
+  endpoint:
+    health:
+      show-details: when_authorized
+      group:
+        readiness:
+          include: db,calculator,cache
+  health:
+    defaults:
+      enabled: true
+
 ---
 
 spring:
