--- a/java/api/src/main/resources/application.yml
+++ b/java/api/src/main/resources/application.yml
@@ -109,3 +109,16 @@ swagger:
   info:
     title: CompreFace - API
     version: 0.0.2-SNAPSHOT
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health
+  endpoint:
+    health:
+      show-details: when_authorized
+      group:
+        readiness:
+          include: db,liquibase,diskSpace,caches,calculator
+        liveness:
+          include: db,liquibase,diskSpace,caches,calculator
