AIEAE-277: apply agent patch

--- a/apps/frs-crud-app/src/main/resources/application.yaml
+++ b/apps/frs-crud-app/src/main/resources/application.yaml
@@ -73,3 +73,15 @@ logging:
           descriptor:
             sql:
               BasicBinder: TRACE
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info
+  endpoint:
+    health:
+      probes:
+        enabled: true
+      group:
+        readiness:
+          include: db,mlCalculator,cache
