--- a/apps/frs-core-app/src/main/resources/application.yml
+++ b/apps/frs-core-app/src/main/resources/application.yml
@@ -5,6 +5,19 @@ spring:
   profiles:
     active: dev
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info
+  endpoint:
+    health:
+      probes:
+        enabled: true
+      group:
+        readiness:
+          include: mongo,mlCalculator,cache
+
 ---
 
 spring:
